modificacion-de-la-pagina-2

--- a/page2.html
+++ b/page2.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Mi Página Web</title>
+    <title>Pagina sacada de chat gpt</title>
 </head>
 <body>
-    <h1>Hola, mundo!</h1>
+    <h1>Victos estuvo aqui</h1>
     <p>Esta es una página web HTML básica.</p>
 </body>
 </html>
