--- a/page2.html
+++ b/page2.html
@@ -6,5 +6,8 @@
 <body>
     <h1>Victos estuvo aqui</h1>
     <p>Esta es una página web HTML básica.</p>
+    <div>
+        <img src="dare.jpeg" alt="Daredevil">
+    </div>
 </body>
 </html>
